Fix header/nav from flickering on scroll in various browsers
- add hardware acceleraton fixes to sass to prevent navigation from flickering
- clean up unused mixins

--- a/src/styles/chrome/_header.scss
+++ b/src/styles/chrome/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  @include accelerate;
   @include clearfix;
   position: fixed;
   width: 100%;
